css fix for whitespaces in mobile

--- a/portfolio-app/src/app/header-app/header-app.component.scss
+++ b/portfolio-app/src/app/header-app/header-app.component.scss
@@ -37,6 +37,7 @@ img {
   .sticky-header.fadeIn {
     position: fixed !important;
     background: white !important;
+    width: 75%;
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.2);
     animation: slideDown 0.9s ease-out;
@@ -109,7 +110,7 @@ background: linear-gradient(
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-content: center;
     align-items: center;
   }
@@ -447,7 +448,6 @@ button.lets-connect {
   width: 125px;
   height: 50px;
   bottom: 25px;
-  right: 40px;
   z-index: 1000;
   box-shadow: 4px 4px 24px 0 rgba(0, 0, 0, 0.12);
   line-height: 130%;
@@ -555,6 +555,14 @@ button.lets-connect {
   h1 {
     font-size:24px;
   }
+
+  .nav-links {
+    display: none;
+  }
+
+  .hero {
+    flex-wrap:wrap !important
+  }
 }
 
 .wave-container{
@@ -599,19 +607,6 @@ button.lets-connect {
  }
 
 
- @media (max-width: 768px) {
-  .hero {
-    flex-wrap:wrap !important
-  }
-
-}
-
-// @media (max-width: 768px) {
-//   .hero {
-//     flex-wrap:wrap
-//   }
-
-// }
 
 
  
